--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![Codecov test coverage](https://codecov.io/gh/chriszheng2016/zstexplorer/branch/master/graph/badge.svg)](https://codecov.io/gh/chriszheng2016/zstexplorer?branch=master)
 <!-- badges: end -->
 
 The goal of zstexplorer is to ...
